// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SignUp Matches snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <form
        data-testid="ref"
        novalidate=""
      >
        <p>
          First Name
        </p>
        <input
          class="text-black"
          name="firstName"
          placeholder="Enter first name"
          value=""
        />
        <span
          class="text-green-500"
        >
          Valid
        </span>
        <br />
        <p>
          Surname
        </p>
        <input
          class="text-black"
          name="surname"
          placeholder="Enter surname"
          value=""
        />
        <span
          class="text-red-500"
        />
        <br />
        <p>
          Age
        </p>
        <input
          class="text-black"
          name="age"
          placeholder="Enter age"
          value=""
        />
        <span
          class="text-red-500"
        />
        <br />
        <p>
          Email
        </p>
        <input
          class="text-black"
          name="email"
          placeholder="Enter email address"
          value=""
        />
        <span
          class="text-red-500"
        />
        <br />
        <p>
          Password
        </p>
        <input
          class="text-black"
          name="password"
          placeholder="Enter password"
          value=""
        />
        <span
          class="text-red-500"
        />
        <br />
        <button
          class="text-green-500"
          data-testid="ref/signUpButton"
        >
          Enter Details
        </button>
      </form>
    </div>
  </body>,
  "container": <div>
    <form
      data-testid="ref"
      novalidate=""
    >
      <p>
        First Name
      </p>
      <input
        class="text-black"
        name="firstName"
        placeholder="Enter first name"
        value=""
      />
      <span
        class="text-green-500"
      >
        Valid
      </span>
      <br />
      <p>
        Surname
      </p>
      <input
        class="text-black"
        name="surname"
        placeholder="Enter surname"
        value=""
      />
      <span
        class="text-red-500"
      />
      <br />
      <p>
        Age
      </p>
      <input
        class="text-black"
        name="age"
        placeholder="Enter age"
        value=""
      />
      <span
        class="text-red-500"
      />
      <br />
      <p>
        Email
      </p>
      <input
        class="text-black"
        name="email"
        placeholder="Enter email address"
        value=""
      />
      <span
        class="text-red-500"
      />
      <br />
      <p>
        Password
      </p>
      <input
        class="text-black"
        name="password"
        placeholder="Enter password"
        value=""
      />
      <span
        class="text-red-500"
      />
      <br />
      <button
        class="text-green-500"
        data-testid="ref/signUpButton"
      >
        Enter Details
      </button>
    </form>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`UserAvatar Matches snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <form
        data-testid="ref"
        novalidate=""
      >
        <p>
          First Name
        </p>
        <input
          class="text-black"
          name="firstName"
          placeholder="Enter first name"
          value=""
        />
        <span
          class="text-green-500"
        >
          Valid
        </span>
        <br />
        <p>
          Surname
        </p>
        <input
          class="text-black"
          name="surname"
          placeholder="Enter surname"
          value=""
        />
        <span
          class="text-red-500"
        />
        <br />
        <p>
          Age
        </p>
        <input
          class="text-black"
          name="age"
          placeholder="Enter age"
          value=""
        />
        <span
          class="text-red-500"
        />
        <br />
        <p>
          Email
        </p>
        <input
          class="text-black"
          name="email"
          placeholder="Enter email address"
          value=""
        />
        <span
          class="text-red-500"
        />
        <br />
        <p>
          Password
        </p>
        <input
          class="text-black"
          name="password"
          placeholder="Enter password"
          value=""
        />
        <span
          class="text-red-500"
        />
        <br />
        <button
          class="text-green-500"
        >
          Enter Details
        </button>
      </form>
    </div>
  </body>,
  "container": <div>
    <form
      data-testid="ref"
      novalidate=""
    >
      <p>
        First Name
      </p>
      <input
        class="text-black"
        name="firstName"
        placeholder="Enter first name"
        value=""
      />
      <span
        class="text-green-500"
      >
        Valid
      </span>
      <br />
      <p>
        Surname
      </p>
      <input
        class="text-black"
        name="surname"
        placeholder="Enter surname"
        value=""
      />
      <span
        class="text-red-500"
      />
      <br />
      <p>
        Age
      </p>
      <input
        class="text-black"
        name="age"
        placeholder="Enter age"
        value=""
      />
      <span
        class="text-red-500"
      />
      <br />
      <p>
        Email
      </p>
      <input
        class="text-black"
        name="email"
        placeholder="Enter email address"
        value=""
      />
      <span
        class="text-red-500"
      />
      <br />
      <p>
        Password
      </p>
      <input
        class="text-black"
        name="password"
        placeholder="Enter password"
        value=""
      />
      <span
        class="text-red-500"
      />
      <br />
      <button
        class="text-green-500"
      >
        Enter Details
      </button>
    </form>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
